--- a/Var_@_v-0.1_72/PUBLIC/root_styles.css
+++ b/Var_@_v-0.1_72/PUBLIC/root_styles.css
@@ -7,10 +7,9 @@
 html {
   font-weight: 300;
   -webkit-font-smoothing: antialiased;
-}
-
-html, input {
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  background: #101525;
+  color: #ffffff;
+  font-family: monospace;
 }
 
 html, body {
