--- a/SRC.app/styles/root_styles.css
+++ b/SRC.app/styles/root_styles.css
@@ -53,7 +53,7 @@ ul {
   width: 100%;
 }
 
-.login.page .form .usernameInput {
+.login.page .form input {
   background-color: transparent;
   border: none;
   border-bottom: 2px solid #fff;
@@ -67,12 +67,12 @@ ul {
   font-size: 200%;
 }
 
-.login.page .usernameInput {
+.login.page input {
   font-size: 200%;
   letter-spacing: 3px;
 }
 
-.login.page .title, .login.page .usernameInput {
+.login.page .title, .login.page input {
   color: #fff;
   font-weight: 100;
 }
